--- a/EmployeeCRUDTask.WebApp/EmployeeCRUDTask.WebApp.csproj
+++ b/EmployeeCRUDTask.WebApp/EmployeeCRUDTask.WebApp.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmployeeCRUDTask.DAL\EmployeeCRUDTask.DAL.csproj" />
     <ProjectReference Include="..\EmployeeCRUDTask.Domain\EmployeeCRUDTask.Domain.csproj" />
   </ItemGroup>
